# artefact_mapping

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  package.xml
abb_obn/: package.xml
abb_obn/include/abb-odn/: object-tracker.h  object-tracking-pipeline.h  object-tracking.h  object-view.h  pose-buffer.h
abb_obn/share/: .camchain.yaml.swp
abb_obn/src/: object-tracker.cc  object-tracking-pipeline.cc  object-tracking.cc
abb_odn/: package.xml
abb_odn/include/abb-odn/: object-tracker.h  object-tracking-pipeline.h  pose-buffer.h
abb_odn/launch/: launch_odn.launch
abb_odn/share/: camchain.yaml
abb_odn/src/: object-tracker.cc  object-tracking-pipeline.cc  object-tracking.cc
artefact_mapping/: CMakeLists.txt  package.xml
artefact_mapping/include/artefact-mapping/: object-tracker.h  object-tracking-pipeline.h
artefact_mapping/launch/: artefact_mapping.launch
artefact_mapping/share/: camchain-smb261.yaml  camchain-smb263.yaml  camchain-smb264.yaml
artefact_mapping/src/: object-tracker.cc  object-tracking-pipeline.cc  object-tracking.cc  tracker-utils.cc
artefact_msgs/: CMakeLists.txt  package.xml
artefact_msgs/msg/: Artefact.msg
include/abb-odn/: object-tracking.h  tracker-utils.h
share/: camchain.yaml
src/: object-tracker.cc  tracker-utils.cc
