<?xml version="1.0"?>
<package format="2">
  <name>abb_odn</name>
  <version>0.0.1</version>
  <description>ABB demo object detection node</description>

  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>vi_map</depend>
  <depend>aslam_cv_triangulation</depend>
  <depend>darknet_catkin</depend>
  <depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
  <depend>kcf_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>maplab_common</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>minkindr_conversions</depend>
</package>
