<?xml version="1.0"?>
<package format="2">
  <name>artefact_msgs</name>
  <version>0.0.1</version>
  <description>The artefact_msgs package</description>
  <maintainer email="ftschopp@ethz.ch">Florian Tschopp</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/ethz-asl/artefact_mapping</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml" />
  </export>
</package>
